chore(调整代码模板格式): d

--- a/test.html
+++ b/test.html
@@ -55,6 +55,12 @@ let num = 0
     }).catch((err) => {
       console.log(err)
     })
+
+    const test = (text) => {
+      console.log(text)
+    }
+
+    console.log(new Function(,`${test}`))
   </script>
 </body>
 </html>
