--- a/packages/ui/index.html
+++ b/packages/ui/index.html
@@ -1,3 +1,8 @@
+<!--
+ * @Description: 
+ * @Author: xluoyu
+ * @LastEditTime: 2022-08-18 15:57:41
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +11,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <title>Corgi-iCode</title>
     <meta name="description" content="Opinionated Vite Starter Template" />
+    <!-- <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
