--- a/packages/ui/index.html
+++ b/packages/ui/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Description: 
  * @Author: xluoyu
- * @LastEditTime: 2022-08-18 15:57:41
+ * @LastEditTime: 2022-08-18 17:20:56
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +12,13 @@
     <title>Corgi-iCode</title>
     <meta name="description" content="Opinionated Vite Starter Template" />
     <!-- <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script> -->
+    <!-- <script type="importmap">
+      {
+        "imports": {
+          "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+        }
+      }
+    </script> -->
   </head>
   <body>
     <div id="app"></div>
